adding foods to select

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Form</title>
 </head>
 <body>
     
+<form>
+
+    <div class='food'>
+        <input type='checkbox' value='Tacos'>Tacos<br>
+        <input type='checkbox' value='Tacos'>Pizza<br>
+        <input type='checkbox' value='Tacos'>Burger<br>
+
+    </div>
+
+
+
+
+</form>
+
+
+
+
+
 </body>
 </html>
